noinst_LIBRARIES = libobjgtk.a
libobjgtk_a_SOURCES = ObjGtk.h ObjGtk.m \
                      ObjGtkContainer.h \
                      ObjGtkDrawingArea.h ObjGtkDrawingArea.m \
                      ObjGtkSignal.h \
                      ObjGtkWidget.h \
                      ObjGtkWindow.h ObjGtkWindow.m